--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ migrate_working_dir/
 # is commented out by default.
 #.vscode/
 
+/git-sim_media
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
