gitignore git-sim_media

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ migrate_working_dir/
 # is commented out by default.
 #.vscode/
 
-/git-sim_media
+git-sim_media/
 
 # Flutter/Dart/Pub related
 **/doc/api/
